--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/finSmart?serverTimezone=Asia
 spring.datasource.username=root
 spring.datasource.password=secret
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.separator= //
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
